added improvements discussed today

--- a/hw1_2023_ex2_nitai.ipynb
+++ b/hw1_2023_ex2_nitai.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 130,
    "id": "0d443d64-24ab-49fb-bb1e-5af8ebd6847c",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 131,
    "id": "1127f7c7-0dec-4bcb-80e1-9e53a32ac428",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
        "120"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 132,
    "id": "8aeb10f9-70f6-4203-bda0-445deb803532",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "120"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 133,
    "id": "3363c1ba-3d8b-45d6-b48a-fba8946f9095",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 134,
    "id": "528e91e7-9906-4558-81b3-ae67541434a4",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 135,
    "id": "68cb090f-4fd0-49c6-94a8-77b453ed1e3a",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 136,
    "id": "5614057d-ad25-41d9-b000-ed2a875bb324",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 137,
    "id": "0c805610-6fa7-4bf2-8fc7-b0573f850c2b",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 138,
    "id": "65efc940-c40e-4500-8e48-5e9200119fef",
    "metadata": {},
    "outputs": [],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 139,
    "id": "0e15e232-5598-436f-900c-eb0557b60e69",
    "metadata": {},
    "outputs": [],
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 140,
    "id": "5114a86d",
    "metadata": {},
    "outputs": [
@@ -467,7 +467,7 @@
        "2.220446049250313e-16"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,18 +490,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 141,
    "id": "b8114c01-8022-42a7-9aa9-3f4125ae7c42",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def aprox_natural_order(x):\n",
+    "def aprox_natural_order(x, n_terms):\n",
     "    '''Approximate the exponential function using the first n terms of the Taylor series.'''\n",
     "    machine_precision = sys.float_info.epsilon\n",
     "    answer = 1\n",
-    "    delta = 0\n",
-    "    while delta > machine_precision:\n",
+    "    for i in range(1, n_terms):\n",
     "        delta = x**i / factorial(i)\n",
     "        answer += delta\n",
     "        if np.abs(delta) < machine_precision:\n",
@@ -513,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 142,
    "id": "f4f2e6ca",
    "metadata": {},
    "outputs": [],
@@ -527,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 143,
    "id": "ca7938fc",
    "metadata": {},
    "outputs": [
@@ -550,14 +549,33 @@
     "plt.ylabel(\"Approximation\")\n",
     "plt.grid()\n",
     "plt.plot(xs, [exp(x) for x in xs], label=\"exp(x)\")\n",
-    "plt.plot(xs, [aprox_natural_order(x) for x in xs], label=f\"aprox_natural_order, given {n_terms} terms\")\n",
+    "plt.plot(xs, [aprox_natural_order(x,n_terms) for x in xs], label=f\"aprox_natural_order, given {n_terms} terms\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numpy truth[2.061153622438558e-09, 3.059023205018258e-07, 4.5399929762484854e-05, 0.006737946999085467, 0.36787944117144233, 2.718281828459045, 148.4131591025766, 22026.465794806718, 3269017.3724721107, 485165195.4097903]\n",
+      "aprox_natural_order[-19.0, -14.0, -9.0, -4.0, 0.0, 2.0, 6.0, 11.0, 16.0, 21.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'numpy truth{[exp(x) for x in xs]}')\n",
+    "print(f'aprox_natural_order{[aprox_natural_order(x, n_terms) for x in xs]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
    "id": "2b29b6c3",
    "metadata": {},
    "outputs": [
@@ -574,7 +592,7 @@
    ],
    "source": [
     "# plot the error\n",
-    "error = [aprox_natural_order(x) - exp(x) for x in xs]\n",
+    "error = [aprox_natural_order(x, n_terms) - exp(x) for x in xs]\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.title(\"Error in approximation of $e^x$\")\n",
     "plt.xlabel(\"x\")\n",
@@ -613,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 146,
    "id": "51904422",
    "metadata": {},
    "outputs": [
@@ -621,7 +639,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\nitai\\AppData\\Local\\Temp\\ipykernel_25152\\3343163240.py:11: RuntimeWarning: overflow encountered in exp\n",
+      "C:\\Users\\nitai\\AppData\\Local\\Temp\\ipykernel_29476\\2124214034.py:11: RuntimeWarning: overflow encountered in exp\n",
       "  plt.plot(test_data, [np.exp(x) for x in test_data], label=\"exp(x)\")\n"
      ]
     },
@@ -648,7 +666,7 @@
     "plt.ylabel(\"Approximation\")\n",
     "plt.grid()\n",
     "plt.plot(test_data, [np.exp(x) for x in test_data], label=\"exp(x)\")\n",
-    "plt.plot(test_data, [aprox_natural_order(x) for x in test_data], label=f\"aprox_natural_order\")\n",
+    "plt.plot(test_data, [aprox_natural_order(x ,n_terms) for x in test_data], label=f\"aprox_natural_order\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
