added improvements discussed today

--- a/hw1_2023.ipynb
+++ b/hw1_2023.ipynb
@@ -406,6 +406,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Error is defined as:\n",
+    "\n",
+    "$error = |\\hat{x} - x|$\n",
+    "\n",
+    "Where $\\hat{x}$ is the aproximation of the true value $x$. Note that the absolute value of of the difference is taken, so error is infact magnituge of the difference between $\\hat{x}$ and $x$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 626,
    "id": "65efc940-c40e-4500-8e48-5e9200119fef",
