added improvements discussed today

--- a/hw1_2023.ipynb
+++ b/hw1_2023.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 671,
    "id": "0d443d64-24ab-49fb-bb1e-5af8ebd6847c",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 618,
+   "execution_count": 672,
    "id": "1127f7c7-0dec-4bcb-80e1-9e53a32ac428",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
        "120"
       ]
      },
-     "execution_count": 618,
+     "execution_count": 672,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 619,
+   "execution_count": 673,
    "id": "8aeb10f9-70f6-4203-bda0-445deb803532",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "120"
       ]
      },
-     "execution_count": 619,
+     "execution_count": 673,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": 674,
    "id": "3363c1ba-3d8b-45d6-b48a-fba8946f9095",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": 675,
    "id": "528e91e7-9906-4558-81b3-ae67541434a4",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 622,
+   "execution_count": 676,
    "id": "68cb090f-4fd0-49c6-94a8-77b453ed1e3a",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 623,
+   "execution_count": 677,
    "id": "5614057d-ad25-41d9-b000-ed2a875bb324",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 624,
+   "execution_count": 678,
    "id": "0c805610-6fa7-4bf2-8fc7-b0573f850c2b",
    "metadata": {},
    "outputs": [
@@ -387,8 +387,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Answer**\n",
+    "\n",
+    "Error is defined as:\n",
+    "\n",
+    "$error = |\\hat{x} - x|$\n",
+    "\n",
+    "Where $\\hat{x}$ is the aproximation of the true value $x$. Note that the absolute value of of the difference is taken, so error is infact magnituge of the difference between $\\hat{x}$ and $x$."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 625,
+   "execution_count": 679,
    "id": "65222f91",
    "metadata": {},
    "outputs": [
@@ -406,19 +419,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Error is defined as:\n",
-    "\n",
-    "$error = |\\hat{x} - x|$\n",
-    "\n",
-    "Where $\\hat{x}$ is the aproximation of the true value $x$. Note that the absolute value of of the difference is taken, so error is infact magnituge of the difference between $\\hat{x}$ and $x$."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 626,
+   "execution_count": 680,
    "id": "65efc940-c40e-4500-8e48-5e9200119fef",
    "metadata": {},
    "outputs": [],
@@ -430,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 627,
+   "execution_count": 681,
    "id": "95683431",
    "metadata": {},
    "outputs": [],
@@ -442,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 628,
+   "execution_count": 682,
    "id": "1562ba75",
    "metadata": {},
    "outputs": [],
@@ -453,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 683,
    "id": "585e82b6",
    "metadata": {},
    "outputs": [],
@@ -474,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": 684,
    "id": "b41e209c",
    "metadata": {},
    "outputs": [],
@@ -488,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 631,
+   "execution_count": 685,
    "id": "a7a75832",
    "metadata": {},
    "outputs": [
@@ -512,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 632,
+   "execution_count": 686,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 633,
+   "execution_count": 687,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 634,
+   "execution_count": 688,
    "id": "be310ed1",
    "metadata": {},
    "outputs": [
@@ -629,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 635,
+   "execution_count": 689,
    "id": "3d5da316",
    "metadata": {},
    "outputs": [],
@@ -643,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 636,
+   "execution_count": 690,
    "id": "7a1fd43f",
    "metadata": {},
    "outputs": [],
@@ -659,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 637,
+   "execution_count": 691,
    "id": "da7186ee",
    "metadata": {},
    "outputs": [
@@ -681,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 638,
+   "execution_count": 692,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 639,
+   "execution_count": 693,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 640,
+   "execution_count": 694,
    "id": "7c259e2a",
    "metadata": {},
    "outputs": [
@@ -773,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 641,
+   "execution_count": 695,
    "id": "25ec361c",
    "metadata": {},
    "outputs": [
@@ -851,7 +853,7 @@
        "Centered Difference            6.710886  "
       ]
      },
-     "execution_count": 641,
+     "execution_count": 695,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 642,
+   "execution_count": 696,
    "id": "b8114c01-8022-42a7-9aa9-3f4125ae7c42",
    "metadata": {},
    "outputs": [
@@ -1069,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 643,
+   "execution_count": 697,
    "id": "f7c93ee4-f0cd-45ff-8bff-cffc11772c58",
    "metadata": {},
    "outputs": [
