--- a/hw2_2023.ipynb
+++ b/hw2_2023.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "0c56160e-301a-4888-b439-a45bc02b8171",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "d9090c65-724c-4bfc-a19c-85cd7314ca06",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "1d6808a3-aecd-4ebe-aa79-5ddcbff09c17",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Pablo\\AppData\\Local\\Temp\\ipykernel_17404\\132216981.py:8: LinAlgWarning: Diagonal number 3 is exactly zero. Singular matrix.\n",
+      "C:\\Users\\nitai\\AppData\\Local\\Temp\\ipykernel_41804\\132216981.py:8: LinAlgWarning: Diagonal number 3 is exactly zero. Singular matrix.\n",
       "  lu, piv = lu_factor(A)\n"
      ]
     }
@@ -525,70 +525,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_matrix(n) -> np.ndarray:\n",
-    "    \"\"\"Returns an n x n matrix of banded form representing a beam clamped from one end and free at the other.\"\"\"\n",
-    "\n",
-    "    # create a matrix of zeroes\n",
-    "    matrix_with_zeroes = np.zeros((n,n))\n",
-    "\n",
-    "    # define the constant elements\n",
-    "    constant_elements = [1,-4,6,-4,1]\n",
-    "\n",
-    "    # create a copy of the matrix with zeroes to be filled in\n",
-    "    matrix_filled = matrix_with_zeroes\n",
-    "\n",
-    "    # loop over the matrix and fill in the constant elements in and around the diagonal cells\n",
-    "    for i in range(n-4):\n",
-    "        matrix_filled[i+2,i:i+5] = constant_elements\n",
-    "\n",
-    "    # fill in beginning elements of the matrix\n",
-    "    matrix_filled[0,0:3] = 9, -4, 1\n",
-    "    matrix_filled[1,0:4] = -4, 6, -4, 1\n",
-    "\n",
-    "    # fill in ending elements of the matrix\n",
-    "    matrix_filled[n-2,n-4:] = 1, -4, 5, -2\n",
-    "    matrix_filled[n-1,n-3:] = 1, -2, 1\n",
-    "    \n",
-    "    return matrix_filled"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 9., -4.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [-4.,  6., -4.,  1.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 1., -4.,  6., -4.,  1.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  1., -4.,  6., -4.,  1.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  1., -4.,  6., -4.,  1.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  1., -4.,  6., -4.,  1.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  1., -4.,  6., -4.,  1.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  1., -4.,  6., -4.,  1.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  1., -4.,  5., -2.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  1., -2.,  1.]])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# testing the function\n",
-    "test_matrix = make_matrix(10)\n",
-    "test_matrix"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "3a7511aa-c209-4803-96a4-6743b5f52626",
    "metadata": {},
@@ -599,376 +535,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_b(n) -> np.ndarray:\n",
-    "    \"\"\" Returns a vector b consisting of n components. Each component b_i = 1/n**4\"\"\"\n",
-    "    b = np.ones(n)/n**4\n",
-    "    return b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# instantiate the matrices\n",
-    "A_n_100 = make_matrix(100)\n",
-    "A_n_1000 = make_matrix(1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# instantiate the b vectors for n = 100 and n = 1000\n",
-    "b_100 = make_b(100)\n",
-    "b_1000 = make_b(1000)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# LU factorize the matrix using standard scipy library routines for dense matrices\n",
-    "L_100, U_100 = la.lu_factor(A_n_100)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# LU factorize the matrix using standard scipy library routines for dense matrices\n",
-    "L_1000, U_1000 = la.lu_factor(A_n_1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# LU factorize the matrices using standard scipy library routines for sparse matrices\n",
-    "LU_100_sparse = sp.linalg.splu(csc_matrix(A_n_100))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# LU factorize the matrices using standard scipy library routines for sparse matrices\n",
-    "LU_1000_sparse = sp.linalg.splu(csc_matrix(A_n_1000))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Using SciPy library routines for DENSE matrices solving the systems of equations for both n = 100 and n = 1000\n",
-    "x_100_dense = la.lu_solve((L_100, U_100), b_100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Using SciPy library routines for SPARSE matrices solving the systems of equations for n = 1000\n",
-    "x_1000_dense = la.lu_solve((L_1000, U_1000), b_1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Using SciPy library routines for SPARSE matrices solving the systems of equations for both n = 100 and n = 1000\n",
-    "x_100_sparse = LU_100_sparse.solve(b_100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Using SciPy library routines for SPARSE matrices solving the systems of equations for n = 1000\n",
-    "x_1000_sparse = LU_1000_sparse.solve(b_1000)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Cell 9 (dense methods) has an execution time of 1.6 seconds in case of n = 1000 vs. cell 10 (sparse methods) has an execution time of 0.0 seconds for n = 1000. For n = 100, both methods have a time of 0.0. This seems to indicate  that LU factorization is faster using sparse methods and this difference increases as n increases.\n",
-    "Solving time does not differ in timing significantly, taking 0.0 seconds for both sparse and dense methods and for both n = 100 and n = 1000, as can be seen from cells 13, 14, 15 and 16. Next, the running time is measured in more detail."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# creating a function to time the LU factorization\n",
-    "def time_lu_decomposition(A, mode='dense'):\n",
-    "    \"\"\"Returns the time it takes to factorize a matrix A using LU decomposition\"\"\"\n",
-    "    if mode == 'dense':\n",
-    "        L, U = la.lu_factor(A)\n",
-    "        return L, U\n",
-    "    elif mode == 'sparse':\n",
-    "        LU = sp.linalg.splu(csc_matrix(A))\n",
-    "        return LU\n",
-    "    else:\n",
-    "        raise ValueError('mode must be either dense or sparse')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next line magic is used to time the cell executions over 3 runs, 10 loops each"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture time_lu_decomposition_dense_100\n",
-    "%timeit -r 3 -n 10 time_lu_decomposition(A_n_100, 'dense')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture time_lu_decomposition_dense_1000\n",
-    "%timeit -r 3 -n 10 time_lu_decomposition(A_n_1000, 'dense')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture time_lu_decomposition_sparse_100\n",
-    "%timeit -r 3 -n 10 time_lu_decomposition(A_n_100, 'sparse')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture time_lu_decomposition_sparse_1000\n",
-    "%timeit -r 3 -n 10 time_lu_decomposition(A_n_1000, 'sparse')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dense</th>\n",
-       "      <th>sparse</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>n</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>52.7 ms +- 23.5 ms per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
-       "      <td>361 us +- 77.7 us per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1000</th>\n",
-       "      <td>1.57 s +- 63.4 ms per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
-       "      <td>10 ms +- 2.38 ms per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                        dense  \\\n",
-       "n                                                                               \n",
-       "100   52.7 ms +- 23.5 ms per loop (mean +- std. dev. of 3 runs, 10 loops each   \n",
-       "1000   1.57 s +- 63.4 ms per loop (mean +- std. dev. of 3 runs, 10 loops each   \n",
-       "\n",
-       "                                                                      sparse  \n",
-       "n                                                                             \n",
-       "100   361 us +- 77.7 us per loop (mean +- std. dev. of 3 runs, 10 loops each  \n",
-       "1000   10 ms +- 2.38 ms per loop (mean +- std. dev. of 3 runs, 10 loops each  "
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Show the results in a dataframe\n",
-    "pd.set_option('max_colwidth', 400)\n",
-    "df = pd.DataFrame({'n': [100, 1000], 'dense': [time_lu_decomposition_dense_100.stdout[:-2], time_lu_decomposition_dense_1000.stdout[:-2]], 'sparse': [time_lu_decomposition_sparse_100.stdout[:-2], time_lu_decomposition_sparse_1000.stdout[:-2]]})\n",
-    "df.set_index('n', inplace=True)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Interpreting the statistics, intuitions that sparse methods are faster for L U factorization given this matrix is confirmed in for both chosen setting of n, with the difference being larger as n increases. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def count_non_0_elements(matrix: np.ndarray) -> int:\n",
-    "    \"\"\"Returns the number of non-zero elements in a matrix\"\"\"\n",
-    "    return np.count_nonzero(matrix)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "non zero elements of L + U, n = 100, sparse: 784\n",
-      "non zero elements of L + U, n = 1000, sparse: 7083\n",
-      "non zero elements of L + U, n = 100, dense: 9902\n",
-      "non zero elements of L + U, n = 1000, dense: 999002\n"
-     ]
-    }
-   ],
-   "source": [
-    "# the .nnz method returns non-zero elements in a sparse matrix, see https://docs.scipy.org/doc/scipy/reference/generated/scipy.sparse.linalg.SuperLU.html#scipy.sparse.linalg.SuperLU\n",
-    "print('non zero elements of L + U, n = 100, sparse:', LU_100_sparse.nnz)\n",
-    "print('non zero elements of L + U, n = 1000, sparse:', LU_1000_sparse.nnz)\n",
-    "print('non zero elements of L + U, n = 100, dense:', count_non_0_elements(L_100 + U_100))\n",
-    "print('non zero elements of L + U, n = 1000, dense:', count_non_0_elements(L_1000 + U_1000))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "memory_space_taken_LU_sparse_100: 144 bytes\n",
-      "memory_space_taken_LU_sparse_1000: 144 bytes\n",
-      "memory_space_taken_LU_dense_100: 80128 bytes\n",
-      "memory_space_taken_LU_dense_1000: 8000128 bytes\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print the space taken up in memory by the LU factorization of the sparse and dense matrices\n",
-    "memory_space_taken_LU_sparse_100 = sys.getsizeof(LU_100_sparse)\n",
-    "memory_space_taken_LU_sparse_1000 = sys.getsizeof(LU_1000_sparse)\n",
-    "memory_space_taken_LU_dense_100 = sys.getsizeof(L_100 + U_100)\n",
-    "memory_space_taken_LU_dense_1000 = sys.getsizeof(L_1000 + U_1000)\n",
-    "print(f'memory_space_taken_LU_sparse_100: {memory_space_taken_LU_sparse_100} bytes')\n",
-    "print(f'memory_space_taken_LU_sparse_1000: {memory_space_taken_LU_sparse_1000} bytes')\n",
-    "print(f'memory_space_taken_LU_dense_100: {memory_space_taken_LU_dense_100} bytes')\n",
-    "print(f'memory_space_taken_LU_dense_1000: {memory_space_taken_LU_dense_1000} bytes')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The number of non zero elements is significantly higher using dense methods, resulting in larger object size in the memory."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "8ebb2590-2f08-4362-aef6-f334eedbf306",
    "metadata": {},
    "source": [
     "## (c)\n",
     "For $n=100$, what is the condition number? What accuracy do you expect based on the condition number?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "d71e4897-2b95-44de-88a0-029c89a24609",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "130661079.38449307"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Condition number of A_n_100\n",
-    "cond_100 = np.linalg.cond(A_n_100)\n",
-    "cond_100"
    ]
   },
   {
@@ -988,46 +560,6 @@
     "How well do the answers of (b) agree with each other (make an appropriate quantitative comparison)?\n",
     "\n",
     "Should we be worried about the fact that the two answers are different?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "f3087de8-ee2b-45f1-a26c-06c747842835",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compare_solutions(x_1, x_2) -> np.ndarray:\n",
-    "    \"\"\"Returns the difference between two vectors x_1 and x_2\"\"\"\n",
-    "    return np.linalg.norm(x_1 - x_2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "difference_solutions_100: 2.943350696865687e-10\n",
-      "difference_solutions_1000: 3.406242239657442e-07\n"
-     ]
-    }
-   ],
-   "source": [
-    "difference_solutions_100 = compare_solutions(x_100_dense, x_100_sparse)\n",
-    "difference_solutions_1000 = compare_solutions(x_1000_dense, x_1000_sparse)\n",
-    "print(f'difference_solutions_100: {difference_solutions_100}')\n",
-    "print(f'difference_solutions_1000: {difference_solutions_1000}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It can be observed that the total difference in solutions gets larger as n increases."
    ]
   }
  ],
