--- a/hw2_2023.ipynb
+++ b/hw2_2023.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "0c56160e-301a-4888-b439-a45bc02b8171",
    "metadata": {},
    "outputs": [],
@@ -117,12 +117,14 @@
     "1 & 0 & 2 & 0 \\\\ \n",
     "0 & 3 & 0 & 0 \\\\\n",
     "0 & 0 & 4 & 5 \\\\\n",
-    "0 & 0 & 0 & 6 \\end{bmatrix}$$ in the so called compressed sparse row (CSR) format. As you can see, the arrays `row`, `col`, `data` contain the row and column coordinate and the value of each nonzero element respectively."
+    "0 & 0 & 0 & 6 \\end{bmatrix}$$ \n",
+    "\n",
+    "in the so called compressed sparse row (CSR) format. As you can see, the arrays `row`, `col`, `data` contain the row and column coordinate and the value of each nonzero element respectively."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "d9090c65-724c-4bfc-a19c-85cd7314ca06",
    "metadata": {},
    "outputs": [
@@ -332,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "1d6808a3-aecd-4ebe-aa79-5ddcbff09c17",
    "metadata": {},
    "outputs": [
@@ -411,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
