added interpretations to 2d

--- a/hw2_2023_inc_part_2_WIP.ipynb
+++ b/hw2_2023_inc_part_2_WIP.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 75,
    "id": "0c56160e-301a-4888-b439-a45bc02b8171",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 76,
    "id": "d9090c65-724c-4bfc-a19c-85cd7314ca06",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "id": "1d6808a3-aecd-4ebe-aa79-5ddcbff09c17",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,8 @@
       " [5.71428571e-01 5.00000000e-01 1.11022302e-16]]\n",
       "piv [2 2 2]\n",
       "x [ 0.16145833  0.67708333 -0.171875  ]\n",
-      "Condition number: 2.1118968335779856e+16\n"
+      "Condition number: 2.1118968335779856e+16\n",
+      "16.324672699040686\n"
      ]
     }
    ],
@@ -377,7 +378,8 @@
     "print('LU',  lu)\n",
     "print('piv', piv)\n",
     "print('x',   x)\n",
-    "print('Condition number:', cond_number)"
+    "print('Condition number:', cond_number)\n",
+    "print(np.log10(cond_number))"
    ]
   },
   {
@@ -394,7 +396,7 @@
     "\n",
     "#### (c.iv) How many digits of accuracy in the solution would this lead you to expect?\n",
     "\n",
-    "In our case, because the exponent in our condition number is 16, we are expect to loose at least up to 16 digits of accuracy in our result [1]\n",
+    "In our case, because the exponent in our condition number is 16, we expect to loose at least about $\\log_{10}(cond(A))$ digits of accuracy in our result [1] , which in this case is 16 digits.\n",
     "\n",
     "Because the solution values in $x$ are small (within $-1$ and $1$), this renders our result basically useless in terms of accuracy.\n",
     "\n",
@@ -402,11 +404,11 @@
     "\n",
     "which is an unexpected behavior for a simple system like this one which is computed assuming a unique solution for $x$.\n",
     "\n",
-    "Thus, the huge condition number is serving as a cuantitative proxy for the qualitative fact that our system does not actually have a unique solution.\n",
+    "Thus, this huge condition number indicates that our system does not actually have a unique solution.\n",
     "\n",
     "In short, this example illustrates the importance of analyzing the results of our computations and how the condition number can be used as an indicator in systems of linear equations.\n",
     "\n",
-    "[1] Fore a detailed explanation of the underlying math, see https://math.stackexchange.com/questions/2392992/matrix-condition-number-and-loss-of-accuracy\n",
+    "[1] For a detailed explanation of the underlying math, see Heath, M. T. (2018). Scientific computing: an introductory survey, revised second edition. Society for Industrial and Applied Mathematics. p.60\n",
     "\n",
     "#### (c.v) EXTRA: Solving the system after simplifying it first\n",
     "\n",
@@ -415,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +441,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\nitai\\AppData\\Local\\Temp\\ipykernel_34124\\132216981.py:8: LinAlgWarning: Diagonal number 3 is exactly zero. Singular matrix.\n",
+      "C:\\Users\\nitai\\AppData\\Local\\Temp\\ipykernel_32432\\132216981.py:8: LinAlgWarning: Diagonal number 3 is exactly zero. Singular matrix.\n",
       "  lu, piv = lu_factor(A)\n"
      ]
     }
@@ -473,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, and unlike with the previous computation, the library used now gives a warning when printing the solution, \n",
+    "In this case, and unlike the previous computation, the library used now gives a warning when printing the solution, \n",
     "\n",
     "indicating that our original matrix $A$ was singular, which is consistent with our previous results.\n",
     "\n",
@@ -483,11 +485,11 @@
     "\n",
     "This additional computation we perfomed highlights that:\n",
     "\n",
-    "1. Quantitative innacuracies of the storing method of decimal numbers can give rise to qualitative innacuracies in the results,\n",
+    "1. Innacuracies of the storing method of decimal numbers can give rise to innacuracies in the results,\n",
     "\n",
     "2. Mathematically equivalent systems can give rise to different computations,\n",
     "\n",
-    "3. Using a mathematically equivalent system can simplify result interpretation of limit cases, and that\n",
+    "3. Using a mathematically equivalent system can simplify result interpretation of limit cases\n",
     "\n",
     "4. Understanding the interplay between the mathematical model and its computation is important to properly evaluate the accuracy of its results"
    ]
@@ -530,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,32 +565,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 9., -4.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [-4.,  6., -4.,  1.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 1., -4.,  6., -4.,  1.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  1., -4.,  6., -4.,  1.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  1., -4.,  6., -4.,  1.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  1., -4.,  6., -4.,  1.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  1., -4.,  6., -4.,  1.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  1., -4.,  6., -4.,  1.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  1., -4.,  5., -2.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  1., -2.,  1.]])"
+       "array([[ 9., -4.,  1.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [-4.,  6., -4.,  1.,  0.,  0.,  0.,  0.],\n",
+       "       [ 1., -4.,  6., -4.,  1.,  0.,  0.,  0.],\n",
+       "       [ 0.,  1., -4.,  6., -4.,  1.,  0.,  0.],\n",
+       "       [ 0.,  0.,  1., -4.,  6., -4.,  1.,  0.],\n",
+       "       [ 0.,  0.,  0.,  1., -4.,  6., -4.,  1.],\n",
+       "       [ 0.,  0.,  0.,  0.,  1., -4.,  5., -2.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  1., -2.,  1.]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# testing the function\n",
-    "test_matrix = make_matrix(10)\n",
+    "test_matrix = make_matrix(8)\n",
     "test_matrix"
    ]
   },
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -828,13 +828,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>100</th>\n",
-       "      <td>27.2 ms +- 14.2 ms per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
-       "      <td>343 us +- 70.6 us per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
+       "      <td>7.97 ms +- 3.67 ms per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
+       "      <td>202 us +- 59 us per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1000</th>\n",
-       "      <td>1.15 s +- 149 ms per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
-       "      <td>7.27 ms +- 158 us per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
+       "      <td>53.3 ms +- 6.82 ms per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
+       "      <td>4.47 ms +- 74.9 us per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -843,16 +843,16 @@
       "text/plain": [
        "                                                                        dense  \\\n",
        "n                                                                               \n",
-       "100   27.2 ms +- 14.2 ms per loop (mean +- std. dev. of 3 runs, 10 loops each   \n",
-       "1000    1.15 s +- 149 ms per loop (mean +- std. dev. of 3 runs, 10 loops each   \n",
+       "100   7.97 ms +- 3.67 ms per loop (mean +- std. dev. of 3 runs, 10 loops each   \n",
+       "1000  53.3 ms +- 6.82 ms per loop (mean +- std. dev. of 3 runs, 10 loops each   \n",
        "\n",
-       "                                                                      sparse  \n",
-       "n                                                                             \n",
-       "100   343 us +- 70.6 us per loop (mean +- std. dev. of 3 runs, 10 loops each  \n",
-       "1000  7.27 ms +- 158 us per loop (mean +- std. dev. of 3 runs, 10 loops each  "
+       "                                                                       sparse  \n",
+       "n                                                                              \n",
+       "100      202 us +- 59 us per loop (mean +- std. dev. of 3 runs, 10 loops each  \n",
+       "1000  4.47 ms +- 74.9 us per loop (mean +- std. dev. of 3 runs, 10 loops each  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,12 +869,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interpreting the statistics, intuitions that sparse methods are faster for L U factorization given this matrix is confirmed in for both chosen setting of n, with the difference being larger as n increases. "
+    "These results show that, indeed, the sparse method is faster for LU factorization given this matrix, as confirmed in both chosen settings of n, with the difference becoming larger as n increases. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -954,25 +954,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 101,
    "id": "d71e4897-2b95-44de-88a0-029c89a24609",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "130661079.38449307"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "condition: 130661079.38449307\n",
+      "Digits accuracy lost : 8.116146241553112\n"
+     ]
     }
    ],
    "source": [
     "# Condition number of A_n_100\n",
     "cond_100 = np.linalg.cond(A_n_100)\n",
-    "cond_100"
+    "print('condition:', cond_100)\n",
+    "print('Digits accuracy lost :', np.log10(cond_100))"
    ]
   },
   {
@@ -980,7 +979,7 @@
    "id": "6f316041-7f14-48dd-a458-3a01fe87daa3",
    "metadata": {},
    "source": [
-    "your answer (text) here"
+    "Condition number is 130661079.38449307 so we expect to lose $\\log_{10}(cond(A))$, 8 digits of accuracy. Relating this to the result of 1c."
    ]
   },
   {
@@ -996,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 102,
    "id": "f3087de8-ee2b-45f1-a26c-06c747842835",
    "metadata": {},
    "outputs": [],
@@ -1008,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1021,6 +1020,8 @@
     }
    ],
    "source": [
+    "# comparing the eudclidian\n",
+    "\n",
     "difference_solutions_100 = compare_solutions(x_100_dense, x_100_sparse)\n",
     "difference_solutions_1000 = compare_solutions(x_1000_dense, x_1000_sparse)\n",
     "print(f'difference_solutions_100: {difference_solutions_100}')\n",
@@ -1031,7 +1032,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It can be observed that the total difference in solutions gets larger as n increases."
+    "In this case the difference in solutions across methods still appears quite small although it seems to increase by 3 orders of magnitude when n is increased to 1000. Next we compare the quality of solutions by computing the residual, $r$:\n",
+    "\n",
+    "$residual = b - A\\hat{x}$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy_100_sparse: 5.422800026827077e-16\n",
+      "accuracy_100_dense: 6.213745308942541e-16\n",
+      "accuracy_1000_sparse: 1.5786692371158656e-15\n",
+      "accuracy_1000_dense: 1.6321437794182021e-15\n",
+      "difference in accuracy for n = 100: 7.909452821154637e-17\n",
+      "difference in accuracy for n = 1000: 5.347454230233653e-17\n"
+     ]
+    }
+   ],
+   "source": [
+    "# comparing the accuracy of solutions by computing the residual\n",
+    "accuracy_100_sparse = np.linalg.norm(b_100 - A_n_100 @ x_100_sparse)\n",
+    "accuracy_1000_sparse = np.linalg.norm(b_1000 - A_n_1000 @ x_1000_sparse)\n",
+    "accuracy_100_dense = np.linalg.norm(b_100 - A_n_100 @ x_100_dense)\n",
+    "accuracy_1000_dense = np.linalg.norm(b_1000 - A_n_1000 @ x_1000_dense)\n",
+    "print(f'accuracy_100_sparse: {accuracy_100_sparse}')\n",
+    "print(f'accuracy_100_dense: {accuracy_100_dense}')\n",
+    "print(f'accuracy_1000_sparse: {accuracy_1000_sparse}')\n",
+    "print(f'accuracy_1000_dense: {accuracy_1000_dense}')\n",
+    "\n",
+    "# differences in accuracy\n",
+    "print(f'difference in accuracy for n = 100: {accuracy_100_dense - accuracy_100_sparse}')\n",
+    "print(f'difference in accuracy for n = 1000: {accuracy_1000_dense - accuracy_1000_sparse}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we should be worried about this difference in solutions depends on the accuracy we require of the answer in order to achieve the goal for which the calculation was done. In general if the answer differs alot between dense or sparse methods, it would be cause for concern, however from the residuals here we see the difference in the answer is negligable ($7.909 \\times 10^{-17}$\n",
+    " for n = 100 and $5.348 \\times 10^{-17}$\n",
+    " for n = 1000). However, the condition number, which indicates sensitivity of the solution to changes in the input data, is fairly high at $1.3 \\cdot 10^{6}$. Errors, even if starting off small, can compound when using iterative methods. Concluding, we should be cautious in general with solutions obtained with either dense or sparse methods when the matrix is ill-conditioned, especially for application where around 8 digits of accuracy is required."
    ]
   }
  ],
